[tool.poetry]
name = "runningcenter"
version = "0.1.0"
description = ""
authors = ["0xphoton <42502920+maxtalwar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
sqlalchemy = "^2.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
